JS - Update DOM

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
                 </span>
                 <!-- Backlog Content -->
                 <div id="backlog-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="backlog-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                    </ul>
+                    <ul class="drag-item-list" id="backlog-list"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
@@ -45,11 +41,7 @@
                 </span>
                 <!-- Progress Content -->
                 <div id="progress-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="progress-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                    </ul>
+                    <ul class="drag-item-list" id="progress-list"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
@@ -72,11 +64,7 @@
                 </span>
                 <!-- Complete Content -->
                 <div id="complete-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="complete-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                    </ul>
+                    <ul class="drag-item-list" id="complete-list"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
@@ -99,12 +87,7 @@
                 </span>
                 <!-- On Hold Content -->
                 <div id="on-hold-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="on-hold-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non accusantium reprehenderit dolorum omnis ex consequuntur ullam, porro minima autem error quasi debitis nam. Vel, ea ex quasi repellat quod optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate soluta facilis fuga repudiandae sit voluptatibus quae inventore a totam quam, nam deleniti laborum alias pariatur beatae, officiis dolore incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque optio, sit dolor repellat earum accusantium asperiores quis excepturi ratione assumenda nesciunt, consequuntur facilis hic molestias reiciendis atque fugiat, distinctio rem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora nisi assumenda, ratione nulla quo sapiente earum, corporis, velit cumque pariatur id? Alias blanditiis rerum impedit, corrupti natus sequi odio perspiciatis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cupiditate voluptates nostrum facere saepe nulla in quibusdam suscipit quos quae! Veritatis ipsa culpa quas saepe est? Magnam commodi dolorem beatae.</li>
-                    </ul>
+                    <ul class="drag-item-list" id="on-hold-list"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
